# src/modules/learning/dtos/start-session-response.dto.ts
@@ -1,0 +1,21 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { StudySessionMode } from '@prisma/client';
+import { Expose } from 'class-transformer';
+
+export class StartSessionResponseDto {
+  @ApiProperty({ format: 'uuid' })
+  @Expose()
+  sessionId!: string;
+
+  @ApiProperty({ format: 'uuid' })
+  @Expose()
+  studySetId!: string;
+
+  @ApiProperty({ enum: StudySessionMode })
+  @Expose()
+  mode!: StudySessionMode;
+
+  @ApiProperty()
+  @Expose()
+  startedAt!: Date;
+}
